src/index.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap');

html {
  font-size: 10px;
  font-family: 'Barlow Semi Condensed', sans-serif;
}
body {
  margin: 0;
  font-size: 10px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* .App {
  position: relative;
  height: 100vh;
  width: 100vw;
} */

